# NIR_VKR_bio_slam

./:  xecyr.sty  .gitignore  .gitirnore  .gitmodules  1st_plan.md  NDKI.tex  README.md  butifier.md  control.md  intro.md  main.aux  main.dvi  main.tex  qhe.bib  refs.md  robots.md  sensors.md  toc.md
NIR/: control.md  refs.md
VKR/: prewriting.md  Промежуточный отчет о НИР.pptx
VKR/thesis/: bah_article.md  sourses.md
VKR/workspace/: 4plot_odom.xml  README.md  hdl_circle.bag  hdl_circle_01noise_01drift.bag  hdl_circle_05noise_05drift.bag  hdl_circle_05noise_05drift_v2.bag  hdl_circle_2.bag  hdl_circle_true_00drift.bag  hdl_circle_true_05drift.bag  hdl_full.bag  hdl_line.bag  hdl_long.bag  lio_sam_circle.bag  lio_sam_circle_01noise_01drift.bag  lio_sam_line.bag  lio_sam_line_001noise_01drift.bag  lio_sam_line_01noise_01drift.bag  lio_sam_line_01noise_05drift.bag  lio_sam_line_zero_noize.bag  lio_sam_line_zero_noize_2.bag  trajectory.xml
VKR/workspace/src/velodyne_cartographer/: CMakeLists.txt  champ_trajectory_1.py  package.xml
VKR/workspace/src/velodyne_cartographer/configuration_files/: my_adapt_backpack_3d.lua
VKR/workspace/src/velodyne_cartographer/launch/: champ_traj.launch  my_adapt_demo_backpack_3d.launch
VKR/workspace/src/velodyne_cartographer/urdf/: VLP-16.urdf.xacro  example.urdf.xacro
settings/: packages.aux  packages.tex  preferences.aux  preferences.tex
Прямицин/: Pestov.docx  Pestov.odt  mechanic_and_control_quadruped_robot.odt  ~$Pestov.odt
примеры/: Куршаков Г.А. Отчёт.docx.odt  ЦмугуноваЕ.А._отчет_НИР.docx.odt
(+38 files in other folders)
