<?xml version="1.0"?>
<package format="2">
  <name>velodyne_cartogtapher</name>
  <version>0.0.1</version>
  <description>velodyne_cartogtapher</description>

  <maintainer email="andru.pestov@gmail.com">pesta</maintainer>
  <author>pesta</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
